[package]
name = "oxy"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
log = "0.4.6"
env_logger = "0.6.1"
arrayvec = { version = "0.4.10", features = ["serde-1"] }
serde = "1.0.91"
serde_cbor = "0.9.0"
serde_derive = "1.0.91"
linefeed = "0.6.0"
sodiumoxide = "0.2.2"
